--- a/medical app/index.html
+++ b/medical app/index.html
@@ -57,7 +57,7 @@
                   Calculate the number of calories in your meal to have an abundant health and beautiful body.
                 </div>
                 <p>
-                  <a class="button" title="Start calculate" href="#">Start calculate</a>
+                  <a class="button" title="Start calculate" href="calculate.html">Start calculate</a>
                 </p>
               </div>
               <div class="col-image">
